feat: fix models and inputs and outputs controllers